--- a/src/CommNext.Unity/CommNext.Unity/Assets/UI/VesselReportWindow.uxml
+++ b/src/CommNext.Unity/CommNext.Unity/Assets/UI/VesselReportWindow.uxml
@@ -1,12 +1,23 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/CommNextStyles.uss?fileID=7433441132597879392&amp;guid=a2dd25c9df311c044b3d4c1d0b58a080&amp;type=3#CommNextStyles" />
-    <ui:VisualElement name="root" class="root" style="flex-grow: 1; width: 400px; height: 400px;">
-        <ui:VisualElement name="toolbar" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; align-items: center; justify-content: space-between;">
-            <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; align-items: center;">
-                <ui:VisualElement class="app-comm-icon" style="flex-direction: row;" />
-                <ui:Label tabindex="-1" text="Vessel Name" display-tooltip-when-elided="true" name="name-label" style="margin-left: 2px;" />
+    <ui:VisualElement name="root" class="root" style="flex-grow: 0; width: 400px; height: 440px; flex-shrink: 0; padding-top: 4px;">
+        <ui:VisualElement name="toolbar" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-direction: row; align-items: center; justify-content: space-between; flex-shrink: 0; margin-bottom: 4px; margin-top: 2px;">
+            <ui:VisualElement style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); flex-direction: row; align-items: center;">
+                <ui:VisualElement class="icon__small" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0); justify-content: flex-start; align-items: center; background-image: url(&apos;project://database/Assets/Images/ReportIcon.png?fileID=21300000&amp;guid=ccbe3209822b1a64482fbbef6e8d590a&amp;type=3#ReportIcon&apos;);" />
+                <ui:Label tabindex="-1" text="VESSEL COMMS REPORT" display-tooltip-when-elided="true" class="font-pixel-subtitle" style="font-size: 13px; padding-bottom: 1px; margin-left: 3px;" />
+                <ui:Label tabindex="-1" text="-----------------------/" display-tooltip-when-elided="true" class="font-pixel-subtitle" style="font-size: 13px; padding-bottom: 1px; margin-left: 3px; color: rgb(59, 64, 75); white-space: nowrap; -unity-text-align: upper-right;" />
             </ui:VisualElement>
             <ui:Button display-tooltip-when-elided="true" name="close-button" enable-rich-text="true" />
+        </ui:VisualElement>
+        <ui:VisualElement name="vessel-row" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; margin-bottom: 8px; margin-top: 2px;">
+            <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; align-items: center;">
+                <ui:Label tabindex="-1" text="Vessel Name" display-tooltip-when-elided="true" name="name-label" style="margin-left: 2px; color: rgb(125, 142, 176);" />
+            </ui:VisualElement>
+        </ui:VisualElement>
+        <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); flex-direction: row; flex-shrink: 0; margin-bottom: 6px;">
+            <ui:DropdownField label="Dropdown" index="-1" choices="System.Collections.Generic.List`1[System.String]" name="filter-dropdown" class="dropdown-field dropdown-field--inline" style="margin-left: 0; width: 150px; flex-grow: 1;" />
+            <ui:DropdownField label="Dropdown" index="-1" choices="System.Collections.Generic.List`1[System.String]" name="sort-dropdown" class="dropdown-field dropdown-field--inline" style="width: 150px; flex-grow: 1;" />
+            <CommNext.Unity.Runtime.Controls.SortDirectionButton focusable="true" direction="Descending" name="sort-direction-button" style="margin-left: 4px;" />
         </ui:VisualElement>
         <ui:ScrollView scroll-deceleration-rate="0,135" elasticity="0,1" name="connections-list" />
     </ui:VisualElement>
