Fix vessel comms report close icon not highlight on hover

--- a/src/CommNext.Unity/CommNext.Unity/Assets/UI/CommNextStyles.uss
+++ b/src/CommNext.Unity/CommNext.Unity/Assets/UI/CommNextStyles.uss
@@ -61,6 +61,10 @@
     -unity-background-image-tint-color: var(--background-lightgray-4);
 }
 
+#close-button:hover {
+    -unity-background-image-tint-color: var(--dark-red);
+}
+
 .toolbar {
     background-color: var(--black);
     border-width: 1px;
