--- a/src/CommNext.Unity/CommNext.Unity/Assets/UI/CommNextStyles.uss
+++ b/src/CommNext.Unity/CommNext.Unity/Assets/UI/CommNextStyles.uss
@@ -378,5 +378,64 @@
 }
 
 .button-sort-direction--descending {
-    rotate: 0deg;
+    rotate: 0;
+}
+
+#tooltip {
+}
+
+.tooltip {
+    flex-grow: 1;
+    background-image: url('project://database/Assets/Images/TooltipBg.png?fileID=21300000&guid=5dc9e7533cd57af4291c5817bb6d671f&type=3#TooltipBg');
+    min-width: 50px;
+    min-height: 16px;
+    opacity: 0;
+    -unity-slice-left: 4;
+    -unity-slice-top: 4;
+    -unity-slice-right: 4;
+    -unity-slice-bottom: 4;
+    -unity-background-image-tint-color: rgb(13, 14, 18);
+    -unity-slice-scale: 0.5px;
+    transition-property: all, opacity;
+    transition-duration: 0s, 0.3s;
+    transition-timing-function: ease, ease;
+    transition-delay: 0s, 0s;
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    transform-origin: left top;
+    translate: -50% -100%;
+}
+
+.tooltip.tooltip__shown {
+    opacity: 1;
+}
+
+.tooltip__border {
+    flex-grow: 1;
+    background-color: rgba(0, 0, 0, 0);
+    -unity-slice-left: 12;
+    -unity-slice-top: 12;
+    -unity-slice-right: 12;
+    -unity-slice-bottom: 12;
+    background-image: url('project://database/Assets/Images/TooltipBorder.png?fileID=21300000&guid=6d23dffd7f2687d468f590413704d40b&type=3#TooltipBorder');
+    -unity-background-image-tint-color: rgb(208, 208, 208);
+    -unity-slice-scale: 0.5px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.tooltip__text {
+    max-width: 350px;
+    flex-wrap: nowrap;
+    white-space: normal;
+    -unity-text-align: upper-center;
+    padding-left: 4px;
+    padding-right: 6px;
+    padding-top: 6px;
+    font-size: 10px;
+    color: rgb(255, 255, 255);
 }
