--- a/src/CommNext.Unity/CommNext.Unity/Assets/UI/CommNextMapToolbar.uxml
+++ b/src/CommNext.Unity/CommNext.Unity/Assets/UI/CommNextMapToolbar.uxml
@@ -2,8 +2,8 @@
     <Style src="project://database/Assets/UI/CommNextStyles.uss?fileID=7433441132597879392&amp;guid=a2dd25c9df311c044b3d4c1d0b58a080&amp;type=3#CommNextStyles" />
     <ui:VisualElement name="toolbar" class="toolbar" style="flex-grow: 0; width: 100px; height: 40px; flex-direction: row; justify-content: center; align-self: flex-start; align-items: center; border-left-width: 0.5px; border-right-width: 0.5px; border-top-width: 0.5px; border-bottom-width: 1.5px;">
         <ui:Label tabindex="-1" text="COMMNEXT" display-tooltip-when-elided="true" class="toolbar-label" style="position: absolute; translate: -50% 0; -unity-font-style: bold;" />
-        <ui:Button display-tooltip-when-elided="true" enable-rich-text="true" name="lines-button" class="toolbar-button toolbar-comm-icon toolbar-comm-icon--lines toolbar-comm-icon--active" />
-        <ui:Button display-tooltip-when-elided="true" enable-rich-text="true" name="rulers-button" class="toolbar-button toolbar-comm-icon" style="background-image: url(&apos;project://database/Assets/Images/RulerIcon.png?fileID=21300000&amp;guid=3b9ca3009b51d014a9e7fa9131114060&amp;type=3#RulerIcon&apos;);" />
-        <ui:Button display-tooltip-when-elided="true" enable-rich-text="true" name="vessel-report-button" class="toolbar-button toolbar-comm-icon" style="background-image: url(&apos;project://database/Assets/Images/ReportIcon.png?fileID=21300000&amp;guid=ccbe3209822b1a64482fbbef6e8d590a&amp;type=3#ReportIcon&apos;);" />
+        <ui:Button display-tooltip-when-elided="true" enable-rich-text="true" name="lines-button" class="toolbar__icon toolbar__icon--comm-lines" />
+        <ui:Button display-tooltip-when-elided="true" enable-rich-text="true" name="rulers-button" class="toolbar__icon" style="background-image: url(&apos;project://database/Assets/Images/RulerIcon.png?fileID=21300000&amp;guid=3b9ca3009b51d014a9e7fa9131114060&amp;type=3#RulerIcon&apos;);" />
+        <ui:Button display-tooltip-when-elided="true" enable-rich-text="true" name="vessel-report-button" class="toolbar-button toolbar-comm-icon toolbar__icon" style="background-image: url(&apos;project://database/Assets/Images/ReportIcon.png?fileID=21300000&amp;guid=ccbe3209822b1a64482fbbef6e8d590a&amp;type=3#ReportIcon&apos;);" />
     </ui:VisualElement>
 </ui:UXML>
