--- a/src/CommNext.Unity/CommNext.Unity/Assets/UI/CommNextStyles.uss
+++ b/src/CommNext.Unity/CommNext.Unity/Assets/UI/CommNextStyles.uss
@@ -86,7 +86,7 @@
     padding-bottom: 1px;
 }
 
-.toolbar-comm-icon {
+.toolbar__icon {
     -unity-background-scale-mode: initial;
     background-size: 16px 16px;
     padding-left: 4px;
@@ -101,35 +101,47 @@
     transition: all 0.2s;
 }
 
-.toolbar-comm-icon--none {
+.toolbar__icon.toolbar__icon--comm-none {
     -unity-background-image-tint-color: rgb(213, 222, 255);
     background-image: url('project://database/Assets/Images/CommIcon.png?fileID=21300000&guid=44fde49e8d63c944d8546059ff442eda&type=3#CommIcon');
 }
 
-.toolbar-comm-icon--lines {
+.toolbar__icon.toolbar__icon--comm-lines {
     -unity-background-image-tint-color: rgb(0, 255, 102);
     background-image: url('project://database/Assets/Images/CommIcon.png?fileID=21300000&guid=44fde49e8d63c944d8546059ff442eda&type=3#CommIcon');
 }
 
-.toolbar-comm-icon--active {
+.toolbar__icon.toolbar__icon--comm-active {
     -unity-background-image-tint-color: rgb(0, 255, 102);
     background-image: url('project://database/Assets/Images/CommActiveIcon.png?fileID=21300000&guid=65ee5addc1a687148add89fab0312eee&type=3#CommActiveIcon');
 }
 
-.toolbar-comm-icon--none:hover {
+.toolbar__icon.toolbar__icon--comm-none:hover {
     -unity-background-image-tint-color: rgb(128, 134, 153);
 }
 
-.toolbar-comm-icon--lines:hover {
+.toolbar__icon.toolbar__icon--comm-lines:hover {
     -unity-background-image-tint-color: rgb(17, 152, 73);
 }
 
-.toolbar-comm-icon--active:hover {
+.toolbar__icon.toolbar__icon--comm-active:hover {
     -unity-background-image-tint-color: rgb(17, 152, 73);
 }
 
-.toolbar-comm-icon.toggled {
+.toolbar__icon {
+    -unity-background-image-tint-color: rgb(213, 222, 255);
+}
+
+.toolbar__icon:hover {
+    -unity-background-image-tint-color: rgb(128, 134, 153);
+}
+
+.toolbar__icon.toggled {
     -unity-background-image-tint-color: rgb(0, 255, 102);
+}
+
+.toolbar__icon.toggled:hover {
+    -unity-background-image-tint-color: rgb(17, 152, 73);
 }
 
 .app-comm-icon {
