Add ability to switch vessel by clicking on the connections in the vessel report

--- a/src/CommNext.Unity/CommNext.Unity/Assets/UI/CommNextStyles.uss
+++ b/src/CommNext.Unity/CommNext.Unity/Assets/UI/CommNextStyles.uss
@@ -178,6 +178,11 @@
     padding-right: 6px;
     padding-top: 6px;
     padding-bottom: 6px;
+    transition: background-color 0.18s;
+}
+
+.row__container:hover {
+    background-color: rgb(67, 72, 155);
 }
 
 .icon__small {
