--- a/src/CommNext.Unity/CommNext.Unity/Assets/UI/Components/NetworkConnectionView.uxml
+++ b/src/CommNext.Unity/CommNext.Unity/Assets/UI/Components/NetworkConnectionView.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/CommNextStyles.uss?fileID=7433441132597879392&amp;guid=a2dd25c9df311c044b3d4c1d0b58a080&amp;type=3#CommNextStyles" />
     <ui:VisualElement class="row__spacer" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0);">
-        <ui:VisualElement class="row__container" style="flex-grow: 1; flex-direction: row; align-items: center; padding-left: 6px; padding-right: 6px; padding-top: 6px; padding-bottom: 6px; flex-shrink: 0;">
+        <ui:VisualElement name="row__container" class="row__container" style="flex-grow: 1; flex-direction: row; align-items: center; padding-left: 6px; padding-right: 6px; padding-top: 6px; padding-bottom: 6px; flex-shrink: 0;">
             <ui:VisualElement style="flex-grow: 0; background-color: rgba(0, 0, 0, 0);">
                 <ui:VisualElement name="connection-icon" class="relay__icon" style="flex-grow: 0; background-color: rgba(0, 0, 0, 0);" />
             </ui:VisualElement>
