--- a/src/CommNext.Unity/CommNext.Unity/Assets/UI/CommNextStyles.uss
+++ b/src/CommNext.Unity/CommNext.Unity/Assets/UI/CommNextStyles.uss
@@ -456,3 +456,60 @@
     font-size: 10px;
     color: rgb(255, 255, 255);
 }
+
+.band-row {
+    flex-grow: 0;
+    background-color: rgb(34, 38, 46);
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    align-self: stretch;
+    padding-left: 2px;
+    padding-right: 2px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.unity-toggle.pixel-toggle #unity-checkmark {
+    background-image: url('project://database/Assets/Images/TooltipBg.png?fileID=2800000&guid=5dc9e7533cd57af4291c5817bb6d671f&type=3#TooltipBg');
+    -unity-background-image-tint-color: rgba(0, 0, 0, 0);
+    -unity-slice-left: 4;
+    -unity-slice-top: 4;
+    -unity-slice-right: 4;
+    -unity-slice-bottom: 4;
+    -unity-slice-scale: 0.5px;
+    width: 10px;
+    height: 10px;
+    border-width: 0;
+    background-color: rgba(0, 0, 0, 0);
+    align-items: center;
+    align-self: center;
+    justify-content: center;
+}
+
+.unity-toggle.pixel-toggle:checked #unity-checkmark {
+    -unity-background-image-tint-color: var(--led-green);
+}
+
+.unity-toggle.pixel-toggle .unity-toggle__input {
+    width: 16px;
+    height: 16px;
+    background-image: url('project://database/Assets/Images/TooltipBorder.png?fileID=21300000&guid=6d23dffd7f2687d468f590413704d40b&type=3#TooltipBorder');
+    -unity-background-image-tint-color: var(--lightgray-2);
+    -unity-slice-left: 12;
+    -unity-slice-top: 12;
+    -unity-slice-right: 12;
+    -unity-slice-bottom: 12;
+    -unity-slice-scale: 0.5px;
+    border-width: 0;
+    align-items: stretch;
+    justify-content: center;
+}
+
+.unity-toggle.pixel-toggle:hover .unity-toggle__input {
+    -unity-background-image-tint-color: white;
+}
