Add UI indicator if active vessel is not powered
Plus a dedicated tooltip in the connections list for the power icon. This way it's easier to see if connection cannot be made due to to _target_ node being out of EC, or if the problem lays in the active vessel.

--- a/src/CommNext.Unity/CommNext.Unity/Assets/UI/CommNextStyles.uss
+++ b/src/CommNext.Unity/CommNext.Unity/Assets/UI/CommNextStyles.uss
@@ -229,6 +229,11 @@
     -unity-background-image-tint-color: var(--red);
 }
 
+.icon--no-power-active {
+    -unity-background-image-tint-color: var(--red);
+    opacity: 0.3;
+}
+
 .direction__tag {
     flex-grow: 0;
     flex-direction: row;
